Spacing between UKPRN Help link and continue button fixed.

--- a/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
+++ b/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
@@ -216,6 +216,11 @@
             }    
 }
 
+#add-provider-reference{
+    .ukprn-help{
+        margin-bottom:30px;
+    }
+}
   
 //all mobile media query breakpoints
 //==================================
